<resources>
    <string name="app_name">FishFord</string>

    <string name="rules"><font color="#272727">Согласен с </font><font color="#3B7E91">правилами</font></string>
    <string name="login">Войти</string>
    <string name="password">Введите пароль</string>
    <string name="e_mail">Введите почту</string>
    <string name="Hello">Добро пожаловать!</string>
    <string name="no_pass">Забыли пароль?</string>

    <string name="valerr"><font color="#FE5151">Неверный Email или Пароль!</font></string>


    <string name="Username">…</string>
    <string name="avatars">avatar</string>

    <string name="todo">TODO</string>

    <string name="group">   null   </string>
    <string name="dopgroup">   -   </string>
    <string name="type">   null   </string>

    <string name="h1">Ваше расписание</string>
    <string name="H1Reg">Регистрация нового пользователя</string>
    <string name="btnReg">Зарегестрировать</string>
    <string name="MailReg">Почта *</string>
    <string name="GroupeReg">Группа *</string>
    <string name="DopGroupeReg">Подгруппа *</string>
    <string name="NameReg">Фамилия Имя Отчество *</string>
    <string name="TypeReg">Категория *</string>
    <string name="btngen">Сгенерировать пароль</string>
    <string name="hintgen">Сгенерируйте пароль</string>
    <string name="options_btn_reg">Регистрация пользователя</string>
    <string name="options_btn_groupe">Добавление группы</string>
    <string name="h1grad">Создание новой группы студентов</string>
    <string name="btn_ad">Добавить</string>
    <string name="para_1">1 \n<small> 8:00</small></string>
    <string name="para_2">2 \n<small> 9:40</small></string>
    <string name="para_3">3 \n<small> 11:30</small></string>
    <string name="para_4">4 \n<small> 13:10</small></string>
    <string name="para_5">5 \n<small> 14:50</small></string>
    <string name="para_6">6 \n<small> 16:30</small></string>
    <string name="options_btn_res">Сменить пароль</string>


</resources>